Enigma/testing/error/firstrotornotreflector.inp
* BETA GAMMA I II III AJIO (IO)
JOIJISDOJF